# greentic-sorla

./: .foxguard.yml  Cargo.toml  LICENSE  README.md  coverage-policy.json  prompt-session.json
.codex/: PR-01-repo-scaffold.md  PR-01-validation-contract-docs.md  PR-02-v0.2-language.md  PR-03-generate-validation-assets.md  PR-03-ir-and-artifacts.md  PR-04-agent-gateway-handoff-manifest.md  PR-05-exposure-policy.md  PR-05-wizard-answers.md  PR-06-provider-migration-compatibility.md  PR-07-extension-docs-questions.md  PR-08-extension-handoff-refactor-questions.md  PR-08-gtc-extension-contract-docs.md  PR-09-ci-release-validation.md  PR-09-rename-migration-questions.md  PR-11-full-domain-answers-gtpack.md  architecture_rules.md  global_rules.md  repo_overview.md
.codex/done/: PR-01-add-ontology-authoring-model.md  PR-01-agent-endpoint-language-model.md  PR-01-metrics-schema-and-answers.md  PR-01-prompt-domain-types.md  PR-01-semantic-answers-v2.md  PR-01-sorla-design-model-from-yaml.md  PR-02-agent-endpoint-validation-parser.md  PR-02-concept-view-model.md  PR-02-deterministic-sorla-compiler.md  PR-02-emit-deterministic-ontology-artifacts.md  PR-02-llm-capability-abstraction.md  PR-02-metrics-yaml-ir-validation.md  PR-02-rust-contract-types-schema.md  PR-03-agent-endpoint-canonical-ir.md  PR-03-metrics-pack-handoff.md  PR-03-prompt-session-engine.md  PR-03-semantic-aliases-and-entity-linking-declarations.md  PR-03-semantic-patch-engine.md  PR-03-update-mode-semantic-delta-operations.md  PR-04-designer-extension-sdk-integration.md  PR-04-generic-retrieval-bindings.md  PR-04-greentic-sorla-versioned-views.md  PR-04-lib-wizard-pack-facade.md  PR-04-pack-assembly-doctor.md  PR-04-prompt-engine-phase-refactor.md  PR-04-prompt-metrics-authoring.md  PR-04-sorla-stack-pack-contract.md  (+43 more)
.i18n/: translator-state.json
ci/: local_check.sh
crates/greentic-sorla-cli/: Cargo.toml  README.md
crates/greentic-sorla-cli/benches/: perf.rs
crates/greentic-sorla-cli/examples/answers/: create_agent_endpoints.json  landlord_tenant_pack.json  landlord_tenant_validation_pack.json
crates/greentic-sorla-cli/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
crates/greentic-sorla-cli/src/: embedded_i18n.rs  lib.rs  main.rs
crates/greentic-sorla-cli/tests/: perf_scaling.rs  perf_timeout.rs
crates/greentic-sorla-designer-extension/: Cargo.toml  README.md  describe.json
crates/greentic-sorla-designer-extension/src/: bindings.rs  component.rs  lib.rs
crates/greentic-sorla-designer-extension/tests/: designer_node_type_to_locked_endpoint.rs  designer_prompt_to_gtpack.rs
crates/greentic-sorla-designer-extension/wit/: world.wit
crates/greentic-sorla-designer-extension/wit-deps/: extension-base.wit  extension-design.wit  extension-host.wit
crates/greentic-sorla-e2e/: Cargo.toml  README.md
crates/greentic-sorla-e2e/src/: landlord_tenant.rs  lib.rs
crates/greentic-sorla-e2e/tests/: landlord_tenant_foundationdb.rs
crates/greentic-sorla-ir/: Cargo.toml  README.md
crates/greentic-sorla-ir/src/: lib.rs
crates/greentic-sorla-lang/: Cargo.toml  README.md
crates/greentic-sorla-lang/src/: ast.rs  lib.rs  parser.rs
crates/greentic-sorla-lib/: Cargo.toml  README.md  build.rs
crates/greentic-sorla-lib/examples/answers/: create_minimal.json  landlord_tenant_exported_candidate_pack.json  minimal_validation_pack.json  update_minimal.json
crates/greentic-sorla-lib/i18n/: ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  km.json  kn.json  lo.json  lt.json  lv.json  ml.json  mr.json  my.json  nah.json  ne.json  (+19 more)
crates/greentic-sorla-lib/src/: lib.rs
crates/greentic-sorla-lib/src/compiler/: expanders.rs  mod.rs  plan.rs  provenance.rs  update.rs
crates/greentic-sorla-lib/src/prompt/: answers_v2.rs  draft.rs  engine.rs  llm.rs  mod.rs  questions.rs  review_agents.rs  types.rs
crates/greentic-sorla-pack/: Cargo.toml  README.md
crates/greentic-sorla-pack/src/: lib.rs  sorx_compatibility.rs  sorx_exposure.rs  sorx_validation.rs  validation_generator.rs
crates/greentic-sorla-pack/tests/golden/: customer_contact_agent_endpoints.agent-gateway.json  customer_contact_agent_endpoints.inspect.json  customer_contact_agent_endpoints.sorla.yaml  tenant_v0_2.inspect.json  tenant_v0_2.sorla.yaml
crates/greentic-sorla-wizard/: Cargo.toml  README.md
crates/greentic-sorla-wizard/src/: lib.rs  schema.rs
demo-package/: sorla.yaml
docs/: agent-endpoint-handoff-contract.md  agent-endpoints.md  architecture.md  artifacts.md  concept-view-model.md  designer-extension.md  designer-sdk-extension.md  designer-yaml-source-of-truth.md  entity-linking.md  extensions-with-gtc.md  landlord-tenant-e2e.md  library-api.md  metrics.md  naming-migration.md  ontology-compatibility.md  ontology-handoff-scenario.md  ontology-production-readiness.md  ontology-security.md  ontology.md  packaging.md  product-shape.md  prompt-authoring.md  retrieval-bindings.md  semantic-patches.md  sorla-gtpack.md  sorla-lib.md  sorx-deployment-handoff.md  sorx-gtpack-validation.md  wizard.md
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
tools/: i18n.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+309 files in other folders)
