[workspace]
members = [
  "crates/greentic-sorla-cli",
  "crates/greentic-sorla-ir",
  "crates/greentic-sorla-lang",
  "crates/greentic-sorla-pack",
  "crates/greentic-sorla-wizard",
  "xtask",
]
exclude = [
  "crates/greentic-sorla-e2e",
]
default-members = [
  "crates/greentic-sorla-cli",
  "crates/greentic-sorla-ir",
  "crates/greentic-sorla-lang",
  "crates/greentic-sorla-pack",
  "crates/greentic-sorla-wizard",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-sorla"
homepage = "https://github.com/greenticai/greentic-sorla"
documentation = "https://docs.rs/greentic-sorla"
readme = "README.md"
keywords = ["greentic", "sorla", "wizard", "compiler"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8"
greentic-qa-lib = "0.5"
greentic-sorla-cli = { package = "greentic-sorla", version = "0.1.5", path = "crates/greentic-sorla-cli" }
greentic-sorla-ir = { version = "0.1.5", path = "crates/greentic-sorla-ir" }
greentic-sorla-lang = { version = "0.1.5", path = "crates/greentic-sorla-lang" }
greentic-sorla-pack = { version = "0.1.5", path = "crates/greentic-sorla-pack" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
