[workspace]
members = [
    "crates/greentic-sorla-cli",
    "crates/greentic-sorla-ir",
    "crates/greentic-sorla-lang",
    "crates/greentic-sorla-lib",
    "crates/greentic-sorla-designer-extension",
    "crates/greentic-sorla-pack",
    "crates/greentic-sorla-wizard",
    "xtask",
]
exclude = [
    "crates/greentic-sorla-e2e",
]
default-members = [
    "crates/greentic-sorla-cli",
    "crates/greentic-sorla-ir",
    "crates/greentic-sorla-lang",
    "crates/greentic-sorla-lib",
    "crates/greentic-sorla-pack",
    "crates/greentic-sorla-wizard",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "1.1.0-dev.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-sorla"
homepage = "https://github.com/greenticai/greentic-sorla"
documentation = "https://docs.rs/greentic-sorla"
readme = "README.md"
keywords = [
    "greentic",
    "sorla",
    "wizard",
    "compiler",
]
categories = [
    "development-tools",
    "command-line-utilities",
]

[workspace.dependencies]
ciborium = "0.2"
criterion = "0.8"
greentic-llm = "1.2.0-research"
greentic-pack = { package = "greentic-pack-lib", version = ">=1.1.0-dev, <1.2.0-0" }
greentic-qa-lib = ">=1.1.0-dev, <1.2.0-0"
greentic-sorla-cli = { package = "greentic-sorla", version = ">=1.1.0-dev, <1.2.0-0", path = "crates/greentic-sorla-cli" }
greentic-sorla-ir = { version = ">=1.1.0-dev, <1.2.0-0", path = "crates/greentic-sorla-ir" }
greentic-sorla-lang = { version = ">=1.1.0-dev, <1.2.0-0", path = "crates/greentic-sorla-lang" }
greentic-sorla-lib = { version = ">=1.1.0-dev, <1.2.0-0", path = "crates/greentic-sorla-lib", default-features = false }
greentic-sorla-designer-extension = { version = ">=1.1.0-dev, <1.2.0-0", path = "crates/greentic-sorla-designer-extension" }
greentic-sorla-pack = { version = ">=1.1.0-dev, <1.2.0-0", path = "crates/greentic-sorla-pack", default-features = false }
greentic-types = ">=1.1.0-dev, <1.2.0-0"
semver = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["net", "rt", "time"] }
zip = "8.6"

[workspace.dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

# The extension contract crate publishes its `1.2.x-research` line via git tags
# on the designer SDK monorepo rather than crates.io. Redirect the dev-dependency
# pin (`=1.2.7-research`) to the matching tag.
[patch.crates-io]
greentic-extension-sdk-contract = { git = "https://github.com/greenticai/greentic-designer-sdk.git", tag = "v1.2.7-research" }
