[package]
name = "greentic-sorla"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Wizard-first CLI for Greentic SoRLa."
readme = "README.md"
include = ["src/**", "i18n/**", "benches/**", "tests/**", "examples/**", "build.rs", "Cargo.toml", "README.md"]

[lib]
name = "greentic_sorla_cli"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "greentic-sorla"
path = "src/main.rs"

[[bench]]
name = "perf"
harness = false

[dependencies]
greentic-sorla-lib.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_yaml.workspace = true
