[package]
name = "greentic-sorla-designer-extension"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Designer extension adapter for Greentic SoRLa."
readme = "README.md"
publish = false

[lib]
name = "greentic_sorla_designer_extension"
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.23"
greentic-sorla-lib = { workspace = true, features = ["wasm"] }
serde.workspace = true
serde_json.workspace = true
wit-bindgen = "0.57"
wit-bindgen-rt = "0.44"

[package.metadata.component]
package = "greentic:sorla-designer-extension"

[package.metadata.component.target]
path = "wit"
world = "design-extension"

[package.metadata.component.target.dependencies]
"greentic:extension-base"   = { path = "wit-deps/extension-base.wit" }
"greentic:extension-host"   = { path = "wit-deps/extension-host.wit" }
"greentic:extension-design" = { path = "wit-deps/extension-design.wit" }
