[package]
name = "greentic-sorla-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "End-to-end scenarios for Greentic SoRLa."
readme = "README.md"
publish = false

[dependencies]
greentic-sorla-ir = { version = "0.1.0", path = "../greentic-sorla-ir" }
greentic-sorla-lang = { version = "0.1.0", path = "../greentic-sorla-lang" }
greentic-sorla-pack = { version = "0.1.0", path = "../greentic-sorla-pack" }
provider-foundationdb = { path = "../../../greentic-sorla-providers/providers/provider-foundationdb" }
sorla-provider-core = { path = "../../../greentic-sorla-providers/crates/sorla-provider-core" }
serde.workspace = true
serde_json.workspace = true
