[package]
name = "greentic-sorla-ir"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Canonical IR scaffolding for Greentic SoRLa."
readme = "README.md"
publish = false

[dependencies]
ciborium.workspace = true
greentic-sorla-lang = { version = "0.6.0", path = "../greentic-sorla-lang" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
