[package]
name = "greentic-sorla-ir"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Canonical IR scaffolding for Greentic SoRLa."
readme = "README.md"
publish = false

[dependencies.ciborium]
workspace = true

[dependencies.greentic-sorla-lang]
version = ">=1.1.0-dev, <1.2.0-0"
path = "../greentic-sorla-lang"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.sha2]
workspace = true
