[package]
name = "greentic-sorla-lang"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language-facing types for Greentic SoRLa."
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
