[package]
name = "greentic-sorla-pack"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Package and artifact scaffolding for Greentic SoRLa."
readme = "README.md"

[features]
default = ["pack-zip"]
pack-zip = ["dep:greentic-pack", "dep:greentic-types", "dep:zip"]

[dependencies]
ciborium.workspace = true
greentic-pack = { workspace = true, optional = true }
greentic-types = { workspace = true, optional = true }
greentic-sorla-lang.workspace = true
greentic-sorla-ir.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
zip = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
