[package]
name = "greentic-sorla-wizard"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Wizard schema scaffolding for Greentic SoRLa."
readme = "README.md"
publish = false

[dependencies.greentic-sorla-cli]
package = "greentic-sorla"
version = ">=0.6.0-dev, <0.7.0-0"
path = "../greentic-sorla-cli"

[dependencies.greentic-sorla-lang]
version = ">=0.6.0-dev, <0.7.0-0"
path = "../greentic-sorla-lang"

[dependencies.greentic-sorla-pack]
version = ">=0.6.0-dev, <0.7.0-0"
path = "../greentic-sorla-pack"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true
