[package]
name = "greentic-sorla-wizard"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Wizard schema scaffolding for Greentic SoRLa."
readme = "README.md"
publish = false

[dependencies]
greentic-sorla-cli.workspace = true
greentic-sorla-lang.workspace = true
greentic-sorla-pack.workspace = true
serde.workspace = true
serde_json.workspace = true
